# open-3d-studio

./: .gitignore  LICENSE  NOTICE.md  PLAN.md  README.md  RELEASE_NOTES.md  VOORSTEL_v0.7_modelleerkern.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
scripts/: copy-assets.mjs  make-icon.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dwg.rs  main.rs
src/catalog/: registry.ts  storaxDrager.ts  storaxLamelWand.ts  storaxRooster.ts
src/catalog/16_fundering/: betonpaal.tpl.ts  poer.tpl.ts  strookfundering.tpl.ts
src/catalog/21_buitenwand/: hsbBuitenwand.tpl.ts  prefabBetonwand.tpl.ts  staalframeSfs.tpl.ts
src/catalog/22_binnenwand/: kzsSilkaLijmwand.tpl.ts  metalStudGips.tpl.ts  ytongCellenbeton.tpl.ts
src/catalog/23_vloer/: breedplaatvloer.tpl.ts  hsbVloer.tpl.ts  mvPlaat.tpl.ts  staalplaatbeton.tpl.ts  vbiKanaalplaat.tpl.ts
src/catalog/24_trap/: kwartTrap.tpl.ts  rechteTrap.tpl.ts
src/catalog/27_dak/: hellendHsbDak.tpl.ts  platDak.tpl.ts  prefabDakelement.tpl.ts
src/catalog/28_constructie/: glulamKolom.tpl.ts  glulamLigger.tpl.ts  prefabBetonkolom.tpl.ts  prefabBetonligger.tpl.ts  staalprofiel.tpl.ts
src/core/: aiAssistant.ts  bcfExport.ts  bcfImport.ts  cobieExport.ts  dwgExport.ts  dxfExport.ts  dxfImport.ts  elementeren.ts  fileio.ts  ifcCommon.ts  ifcEntityMap.ts  ifcExport.ts  ifcFamilyImport.ts  ifcReopen.ts  ilsCheck.ts  mainCategory.ts  meshBuilder.ts  nen2580.ts  o3stTemplate.ts  pluginApi.ts  profileGeometry.ts  psetFactories.ts  rebarGenerator.ts  sectionSvg.ts  sheetPdf.ts  speckleConnector.ts  structuralExport.ts  studio.ts  thermal.ts  types.ts
src/ui/: BsddPicker.tsx  ParamsPanel.tsx  Ribbon.tsx  SheetPreview.tsx  TemplateEditor.tsx  i18n.ts
tests/: validate_ifc.py
tests/headless/: export-scene.ts  geometry-oracle.ts  vite.config.ts
(+30 files in other folders)
