[package]
name = "open-3d-studio"
version = "0.1.0"
description = "Open source 3D-modelleerstudio met IFC als native output"
authors = ["Open 3D Studio contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
