[package]
name = "open-3d-studio"
version = "0.6.0"
description = "Open source 3D-modelleerstudio met IFC als native output"
authors = ["Open 3D Studio contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools bewust niet als feature: in debug-builds staat het standaard aan,
# in release-builds hoort het uit (ultracode-bevinding)
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
# DWG-export (MPL-2.0, Hakan Aktt). File-level copyleft: MIT-licentie van
# Open 3D Studio blijft intact, alleen patches aan acadrust-bronbestanden
# moeten onder MPL-2.0 beschikbaar blijven. Zie NOTICE.md.
acadrust = "0.4.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
